# ai-service

./: .env.example  Dockerfile  pyproject.toml  requirements.txt
app/: config.py  dependencies.py  main.py
app/api/: __init__.py  chat.py  health.py  knowledge.py  router.py
app/core/: embedding.py  errors.py  llm_provider.py
app/ingestion/: chunker.py  embedder.py  pipeline.py
app/ingestion/parsers/: file_parser.py  link_parser.py  text_parser.py
app/models/: requests.py  responses.py
app/rag/: context_builder.py  retriever.py
app/storage/: milvus_client.py  milvus_schema.py
