[project]
name = "ai-service"
version = "0.1.0"
description = "TG-Agent AI Service - LangChain + Milvus RAG"
requires-python = ">=3.11"

[project.dependencies]
fastapi = ">=0.115.0"
uvicorn = {version = ">=0.32.0", extras = ["standard"]}
pydantic = ">=2.0"
pydantic-settings = ">=2.0"
langchain = ">=0.3.0"
langchain-openai = ">=0.2.0"
langchain-anthropic = ">=0.3.0"
langchain-community = ">=0.3.0"
langchain-text-splitters = ">=0.3.0"
pymilvus = ">=2.4.0"
openai = ">=1.50.0"
anthropic = ">=0.39.0"
httpx = ">=0.27.0"
python-multipart = ">=0.0.12"
pypdf = ">=5.0.0"
python-docx = ">=1.1.0"
beautifulsoup4 = ">=4.12.0"
requests = ">=2.32.0"
tenacity = ">=9.0.0"
python-magic = ">=0.4.27"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]
